<resources>
    <string name="app_name">Dog Log</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_medical_history">Medical History</string>
    <string name="menu_misc_info">Misc Information</string>
    <string name="menu_reminders">Reminders</string>
    <string name="menu_shots_medication">Shots and Medication</string>
    <string name="reminder_food">Order Food</string>
    <string name="reminder_office_visit">Schedule Office Visit</string>
    <string name="reminder_distemper_shot">Schedule Distemper Shot</string>
    <string name="reminder_rabies_shot">Schedule Rabies Shot</string>
    <string name="reminder_parvo_shot">Schedule Parvo Shot</string>
    <string name="reminder_hepatitis_shot">Schedule Hepatitis Shot</string>
    <string name="hint_month">MM</string>
    <string name="hint_day">DD</string>
    <string name="hint_year">YYYY</string>
    <string name="button_save" translatable="false">Save</string>
    <string name="distemper_shot_date">Distemper Shot Date</string>
    <string name="rabies_shot_date">Rabies Shot Date</string>
    <string name="parvo_shot_date">Parvo Shot Date</string>
    <string name="hepatitis_shot_date">Hepatitis Shot Date</string>
    <string name="medical_info">Medical Information</string>
    <string name="other_shot_date_and_name">Other Shots</string>
    <string name="other_shot_name">Name of Shot</string>
    <string name="shots">Shots</string>
    <string name="medication">Medication</string>
    <string name="medication_information">Enter medication information here.</string>
    <string name="select_profile">Add Profile</string>
    <string name="dog_name">Dog Name</string>
    <string name="add_new_profile">Add Dog Name</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="SpayNeuter">Spay/Neuter</string>
    <string name="dog_breed">Dog Breed</string>
    <string name="ApproxBirthDate">Approximate Birth Date</string>
    <string name="DogLicenseNumber">Dog License Number</string>
    <string name="ChipInformation">Chip Information</string>
    <string name="VetContactInfo">Vet Contact Info</string>
    <string name="button_load_notes">View Notes</string>
    <string name="button_save_note">Save Note</string>
    <string name="medical_history_date">Enter Date</string>
    <string name="medical_history_notes">Enter Notes</string>
    <string name="misc_info">Misc Information</string>
    <string name="misc_food">Food</string>
    <string name="misc_food_list">Amount and time</string>
    <string name="misc_routine">Daily Routine</string>
    <string name="misc_routine_list">Add routine here</string>
    <string name="misc_other_info">Other Information</string>
    <string name="misc_other_info_list">List other info here</string>
    <string name="title_activity_misc_information">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="take_photo">Take Photo</string>



    <string name="share_activity">Share Activity </string>
    <string name="shared_activity">Shared Activity </string>
    <string name="imageview">Share ImageView</string>
    <string name="share_image">Share Image</string>
    <string name="share_text">Share Text</string>
    <string name="select_image">Select Image</string>
    <string name="enter_text">Enter something to share</string>
    <string name="shared_text">Shared Text</string>
    <string name="shared_image">Shared Image</string>
    <string name="button_save_profile">Save Pofile</string>
    <string name="misc_other">Misc Other</string>
    <string name="distemper_shot">Distemper Shot</string>
    <string name="rabies_shot">Rabies</string>
    <string name="hepatitis_shot">Hepatitis Shot</string>
</resources>