<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShotsMedication">

    <TextView
        android:id="@+id/Shots"
        android:layout_width="65sp"
        android:layout_height="35sp"
        android:layout_marginStart="24sp"
        android:layout_marginLeft="24sp"
        android:layout_marginTop="24sp"
        android:layout_marginEnd="24sp"
        android:layout_marginRight="24sp"
        android:text="@string/shots"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/distemper_shot_month"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/hint_month"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#0B0A0A"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/distemper_shot_date"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/parvo_shot_day"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_day"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/parvo_shot_month"
        app:layout_constraintTop_toBottomOf="@+id/rabies_shot_day" />

    <EditText
        android:id="@+id/other_shot_month"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hint_month"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/other_shot_name"
        app:layout_constraintTop_toBottomOf="@+id/hepatitis_shot_month" />

    <EditText
        android:id="@+id/other_shot_name"
        android:layout_width="150sp"
        android:layout_height="35sp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/other_shot_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hepatitis_shot_date" />

    <EditText
        android:id="@+id/other_shot_day"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hint_day"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/other_shot_month"
        app:layout_constraintTop_toBottomOf="@+id/hepatitis_shot_day" />

    <EditText
        android:id="@+id/other_shot_year"
        android:layout_width="45sp"
        android:layout_height="35sp"
        android:layout_marginStart="4sp"
        android:layout_marginLeft="4sp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16sp"
        android:layout_marginRight="16sp"
        android:ems="10"
        android:hint="@string/hint_year"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/other_shot_day"
        app:layout_constraintTop_toBottomOf="@+id/hepatitis_shot_year" />

    <TextView
        android:id="@+id/rabies_shot_date"
        android:layout_width="150sp"
        android:layout_height="35sp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/rabies_shot_date"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distemper_shot_date" />

    <TextView
        android:id="@+id/distemper_shot_date"
        android:layout_width="150sp"
        android:layout_height="35sp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="104dp"
        android:text="@string/distemper_shot_date"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/rabies_shot_day"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_day"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/rabies_shot_month"
        app:layout_constraintTop_toBottomOf="@+id/distemper_shot_day" />

    <EditText
        android:id="@+id/hepatitis_shot_day"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/hint_day"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/hepatitis_shot_month"
        app:layout_constraintTop_toBottomOf="@+id/parvo_shot_day" />

    <EditText
        android:id="@+id/rabies_shot_month"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_month"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/rabies_shot_date"
        app:layout_constraintTop_toBottomOf="@+id/distemper_shot_month" />

    <TextView
        android:id="@+id/parvo_shot_date"
        android:layout_width="150sp"
        android:layout_height="35sp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/parvo_shot_date"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rabies_shot_date" />

    <EditText
        android:id="@+id/hepatitis_shot_month"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/hint_month"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/hepatitis_shot_date"
        app:layout_constraintTop_toBottomOf="@+id/parvo_shot_month" />

    <EditText
        android:id="@+id/distemper_shot_year"
        android:layout_width="45sp"
        android:layout_height="35sp"
        android:layout_marginStart="4sp"
        android:layout_marginLeft="4sp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/hint_year"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/distemper_shot_day"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/rabies_shot_year"
        android:layout_width="45sp"
        android:layout_height="35sp"
        android:layout_marginStart="4sp"
        android:layout_marginLeft="4sp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_year"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/rabies_shot_day"
        app:layout_constraintTop_toBottomOf="@+id/distemper_shot_year" />

    <EditText
        android:id="@+id/parvo_shot_month"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_month"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/parvo_shot_date"
        app:layout_constraintTop_toBottomOf="@+id/rabies_shot_month" />

    <EditText
        android:id="@+id/hepatitis_shot_year"
        android:layout_width="45sp"
        android:layout_height="35sp"
        android:layout_marginStart="4sp"
        android:layout_marginLeft="4sp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/hint_year"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/hepatitis_shot_day"
        app:layout_constraintTop_toBottomOf="@+id/parvo_shot_year" />

    <EditText
        android:id="@+id/parvo_shot_year"
        android:layout_width="45sp"
        android:layout_height="35sp"
        android:layout_marginStart="4sp"
        android:layout_marginLeft="4sp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_year"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/parvo_shot_day"
        app:layout_constraintTop_toBottomOf="@+id/rabies_shot_year" />

    <TextView
        android:id="@+id/hepatitis_shot_date"
        android:layout_width="150sp"
        android:layout_height="35sp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="36dp"
        android:text="@string/hepatitis_shot_date"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parvo_shot_date" />

    <EditText
        android:id="@+id/distemper_shot_day"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/hint_day"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#0C0C0C"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/distemper_shot_month"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/medLabel"
        android:layout_width="130sp"
        android:layout_height="35sp"
        android:layout_marginTop="404dp"
        android:text="@string/medication"
        android:textIsSelectable="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/medication_info"
        android:layout_width="300sp"
        android:layout_height="45sp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/medication_information"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medLabel" />

    <Button
        android:id="@+id/button_save_shots_medication"

        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginTop="524dp"
        android:onClick="saveShotsMedication"
        android:text="@string/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>